@@ -1,3 +1,14 @@
+2020-01-18  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	balsa-index: Fix the "mostly" part of the previous commit, by
+	using yet another idle handler to allow the tree-view's layout
+	settle down.
+
+	* src/balsa-index.c (bndx_expand_to_row_and_select_idle): new
+	idle handler that scrolls to the desired row;
+	(bndx_expand_to_row_and_select): use it, instead of scrolling
+	immediately after expanding to the row.
+
 2020-01-17  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	balsa-index: improve expand and collapse
